spacing issue

--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@ html {
 
 body {
     margin: 0;
-    height: 90vh;
+    height: 100vh;
+    box-sizing: border-box;
     background-repeat: no-repeat;
     background: linear-gradient(to bottom, #5DE0E6, #004AAD);
     font-family: "Inter", sans-serif;
@@ -25,7 +26,7 @@ body {
 }
 
 .ocean {
-    height: 110%;
+    height: 115%;
     box-sizing: border-box;
     width: 100vw;
     background: linear-gradient(to bottom right, #00000070, #00000000);
@@ -177,7 +178,7 @@ img {
 #links {
     display: flex;
     justify-content: space-around;
-    margin: 0 auto;
+    margin: 0 auto 0.5rem;
     padding: 0;
     width: 20vw;
 }
